# ican_mark

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
cmake/: deps.cmake
lib/mark_action/: CMakeLists.txt  click_action.cpp  mark_action.cpp  mark_action.hpp  rbox_mark.cpp  twice_click.cpp
lib/mark_instance/: CMakeLists.txt  mark_instance.cpp  mark_instance.hpp
lib/mark_widget/: CMakeLists.txt  imagemap.cpp  imageview.cpp  mark_widget.h  markwidget.h  rboxmarkwidget.cpp
test/: CMakeLists.txt  test_action_base.cpp  test_instence_conversion.cpp  test_link.cpp
test/gui_test/: CMakeLists.txt  guitest.cpp  guitest.h  guitest.ui  main.cpp  markarea.cpp  markarea.h  rboxmarkarea.cpp
test/test_imageview/: CMakeLists.txt  imageviewtest.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
util/ical_mark/: CMakeLists.txt  icalmark.cpp  icalmark.h  icalmark.ui  main.cpp
util/ican_mark/: CMakeLists.txt  icanmark.cpp  icanmark.h  icanmark.ui  main.cpp
